--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -2,298 +2,6 @@
 <html lang="fr" dir="ltr">
 
 <head>
-
-  <style>
-    body {
-      background-image: url('assets/img/background.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      height: 100%;
-    }
-
-    img {
-      max-width: 100%;
-      max-height: 100%;
-      display: flex;
-    }
-
-    input {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      margin-bottom: 20px;
-    }
-
-    .container {
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 15px;
-      border-radius: 10px;
-    }
-
-    .system {
-      background: rgba(177, 177, 177, 0.45);
-      border-radius: 15px;
-      margin: 10px;
-      padding: 10px;
-      height: 100%;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-    }
-
-    .system-bar {
-      margin: 1px;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .system-logout {
-      display: inline-flex
-    }
-
-    .system-settings {
-
-      display: inline-flex
-    }
-
-    .system-options-expanded {
-      margin: 1px;
-      width: 100%;
-      display: inline-flex;
-      justify-content: flex-end;
-    }
-
-    .system-settings1 {
-      display: inline-flex;
-      margin-inline: 10px;
-    }
-
-    .system-button {
-      margin-inline: 10px;
-      color: #fff;
-      border-radius: 10px;
-      background: red;
-      border: 0px;
-    }
-
-    .play-zone {
-      padding: .5em;
-      display: flex;
-      justify-content: space-between;
-      background: rgba(167, 167, 167, 0.668);
-    }
-
-    .play-left {
-      padding: .5em;
-      display: flex;
-      width: 50%;
-      border: 2px solid;
-    }
-
-    .play-right {
-      padding: .5em;
-      display: flex;
-      width: 50%;
-      flex-direction: column;
-      align-content: stretch;
-      border: 2px solid;
-    }
-
-    .play-left-characters {
-      justify-content: center;
-      width: 100%;
-      height: auto;
-      overflow-y: auto;
-      overflow-x: auto;
-      background: white;
-    }
-
-    .play-right-background {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: fit-content;
-    }
-
-    .play-right-stats {
-      padding: .5em;
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      border-color: black;
-      border: 5px solid;
-      background: white;
-    }
-
-
-
-    .play-right-stats-summon {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: 100%;
-      align-items: center;
-      align-self: stretch;
-      border: 2px solid;
-    }
-
-    .play-right-stats-summon-cost {
-      margin: 5px;
-      border-radius: 20px;
-      background: rgba(255, 0, 0, 0.707);
-      border: 2px;
-      color: white;
-      padding: 5px;
-      text-align: center;
-    }
-
-    .play-right-stats-summon-button {
-      border: 0;
-      margin: 5px;
-      color: #fff;
-      border-radius: 20px;
-      background: red;
-      border: 2px;
-      padding: 5px;
-      align-items: center;
-    }
-
-    .play-right-stats-money {
-      padding: .5em;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 100%;
-      border: 2px solid;
-    }
-
-    .play-right-stats-money-golds {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: 100%;
-    }
-
-    .play-right-stats-money-diamonds {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: 100%;
-    }
-
-    .play-right-stats-moneypersec {
-      padding: .5em;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 100%;
-      border: 2px solid;
-    }
-
-    .play-right-stats-moneypersec-golds {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: 100%;
-    }
-
-    .play-right-stats-moneypersec-diamonds {
-      padding: .5em;
-      display: flex;
-      width: 100%;
-      height: 100%;
-    }
-
-    .gold-icon,
-    .diamonds-icon {
-      height: 30px;
-      width: 30px;
-      object-fit: contain;
-      margin: 2px;
-    }
-
-    .gold-icon {
-      background-color: rgb(253, 215, 0);
-    }
-
-    .diamonds-icon {
-      background-color: rgb(0, 223, 253);
-    }
-
-    .character-list {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .character {
-      display: flex;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-
-    .character-image {
-      width: 50px;
-      height: 50px;
-      background-size: cover;
-      margin-right: 10px;
-    }
-
-    .character-info {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .character-name {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .character-stats {
-      font-size: 14px;
-      margin-bottom: 5px;
-    }
-
-    .invocation-table {
-      background-color: #f2f2f2;
-      width: fit-content;
-      border-collapse: collapse;
-      text-align: center;
-      table-layout: fixed;
-
-    }
-
-    .invocation-table td,
-    .invocation-table th {
-      border: 1px solid #ddd;
-      padding: 8px;
-      width: 103px;
-    }
-
-    .invocation-table tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-
-    .invocation-table th {
-      padding-top: 0px;
-      padding-bottom: 12px;
-      background-color: #4CAF50;
-      color: white;
-    }
-  </style>
-
   <title>Stickman Impact</title>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -306,10 +14,11 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"> </script>
-
+  <!-- Template Main CSS File -->
+  <link href="assets/css/cart.css" rel="stylesheet">
 </head>
-<body>
 
+<body>
   <div class="container" id="root">
     <div class="system">
       <div class="system-bar">
@@ -363,7 +72,7 @@
                 </tr>
               </thead>
             </table>
-          <!-- Cette liste permet d'afficher un tableau avec les héros qui s'afficheront de manière dynamique. -->
+            <!-- Cette liste permet d'afficher un tableau avec les héros qui s'afficheront de manière dynamique. -->
             <liste_heros v-for="heros in herosObtenus" v-bind:id_hero="heros.id_hero" v-bind:niveau="heros.niveau"
               v-bind:cout="heros.cout" />
           </div>
@@ -382,7 +91,7 @@
               100 Diamants
             </div>
             <div id="app">
-            <!-- Ce bouton sert à lancer une invocation d'un héros. -->
+              <!-- Ce bouton sert à lancer une invocation d'un héros. -->
               <button class="play-right-stats-summon-button" v-on:click="invocationHeros()">
                 + Invocation +
               </button>
@@ -425,7 +134,7 @@
 
             </div>
             <div class="play-right-stats-moneypersec-diamonds">
-            <!-- Ce buton sert à augmenter la valeur des diamants. -->
+              <!-- Ce buton sert à augmenter la valeur des diamants. -->
               <button style="border:0px;background:white;"
                 onclick="diamant=diamant+1;totalDiamant.innerText = diamant;">
                 <div class="diamonds-icon">
@@ -475,6 +184,30 @@
           name: 'Darude',
           file: new Audio('assets/music/darude.mp3'),
           isPlaying: false
+        },
+        {
+          id: 'track4',
+          name: 'Musique 1',
+          file: new Audio('assets/music/23042022_2.mp3'),
+          isPlaying: false
+        },
+        {
+          id: 'track5',
+          name: 'Musique 2',
+          file: new Audio('assets/music/10032022.mp3'),
+          isPlaying: false
+        },
+        {
+          id: 'track6',
+          name: 'Musique 3',
+          file: new Audio('assets/music/01102022EncoreMieux.mp3'),
+          isPlaying: false
+        },
+        {
+          id: 'track7',
+          name: 'Bord de mer',
+          file: new Audio('assets/music/Bord de mer.mp3'),
+          isPlaying: false
         }
       ]
     },
@@ -521,14 +254,14 @@
 
     props: ["id_hero", "niveau", "cout"],
 
-				methods:{
-         upgradeHeros: function() { //Augmente le niveau d'un héros et empêche d'appuyer sur le bouton si le niveau maximal a été atteint
-          if (joueur.obtenirNiveau(this.id_hero) == 5) {
-              document.getElementById("button"+this.id_hero).disabled = true;            
-            }
-            else {
-              app.upgradeHeros(this.id_hero, this.niveau);
-            }
+    methods: {
+      upgradeHeros: function () { //Augmente le niveau d'un héros et empêche d'appuyer sur le bouton si le niveau maximal a été atteint
+        if (joueur.obtenirNiveau(this.id_hero) == 5) {
+          document.getElementById("button" + this.id_hero).disabled = true;
+        }
+        else {
+          app.upgradeHeros(this.id_hero, this.niveau);
+        }
 
       },
       niveauMax: function (niveau) { //Retourne vrai si le niveau n'est pas maximal
@@ -680,7 +413,7 @@
     computed: {
     }
   });
-  
+
   $.ajax({
     type: 'GET',
     url: '/cart/initialisationHerosObtenus',//initialise le tableau des héros de la vue joueur
@@ -807,7 +540,7 @@
                         });
 
                       }
-                      totalDiamant.innerText = diamant;
+                      totalDiamant.innerText = diamant;//affichage des diamants
                     },
                     error: function () {
                       alert('Problème AJAX');
@@ -830,83 +563,83 @@
         if (gold >= cout) {//Si on a assez d'argent
           joueur.augmenterNiveau(id_hero);//On augmente le niveau
 
-              $.ajax({
-                  type: 'POST',
-                  url: '/cart/ajoutInfosInvocationHeros',//Obtention d'infos supplémentaire pour le coût
-                  data:"niveau="+joueur.obtenirNiveau(id_hero),//Envoie du niveau
-                  success: function(received) {
-                    joueur.modifierCout(id_hero, received);//Modification du coût
-                    gold-=parseInt(cout,10);//Retrait de l'argent qu'a coûté l'upgrade
-                    goldPS=joueur.sommeGoldPS();//Calcul du gold
-                    diamantPS=joueur.sommeDiamantPS();//Calcul du diamant
-                    totalGold.innerText = gold;
-                    totalGoldPS.innerText = goldPS;
-                    totalDiamantPS.innerText = diamantPS;
-                  },
-                  error: function() {
-                    alert('Problème AJAX');
-                  }
-                });
-            }
-            else {//Dans le cas où on n'a pas assez de gold
-              window.alert("Il n'y a pas assez d'argent pour augmenter le niveau d'un heros ! Attendez d'avoir plus de gold."); //Message d'alerte pour signaler au joueur qu'il n'a pas assez d'argent
-            }
-              },
-              save: function() {//Sauvegarde les héros et le gold et les diamants du joueur
-            $.ajax({
-                  type: 'POST',
-                  url: '/cart/enregistrementGoldDiamant',//Enregistrement du gold et des diamants du joueur
-                  data:{gold,diamant},//Envoi de la valeur du gold et des diamants
-                  success: function(received) {
-                    $.ajax({
-                      type: 'GET',
-                      url: '/cart/vueTableSQL',//Vérification que les informations sont ajoutées à la table
-                      success: function(received) {
-                        $.ajax({
-                          type: 'GET',
-                          url: '/cart/deleteHeros',//Suppression de tous les héros du joueur dans la base de donnée
-                          success: function(received) {
-                              joueur.herosObtenus.forEach(row =>$.ajax({
-                                type: 'POST',
-                                url: '/cart/enregistrementHeros',//Enregistrement dans la base de donnée de tous les héros du joueur
-                                data:{id_hero : row.id_hero,niveau : row.niveau},//Envoie de l'id, du niveau
-                                success: function(received) {
-                                    window.location.href = 'logout';//Renvoi vers la page du logout
-                                  },
-                                  error: function() {
-                                    alert('Problème AJAX');
-                                  }
-                              }));
-                            },
-                            error: function() {
-                              alert('Problème AJAX');
-                            }
-                        })
-                        },
-                      error: function() {
-                        alert('Problème AJAX');
-                      },
-                    })
-                  },
-                  error: function() {
-                    alert('Problème AJAX');
-                  }
-                });
-          },
+          $.ajax({
+            type: 'POST',
+            url: '/cart/ajoutInfosInvocationHeros',//Obtention d'infos supplémentaire pour le coût
+            data: "niveau=" + joueur.obtenirNiveau(id_hero),//Envoie du niveau
+            success: function (received) {
+              joueur.modifierCout(id_hero, received);//Modification du coût
+              gold -= parseInt(cout, 10);//Retrait de l'argent qu'a coûté l'upgrade
+              goldPS = joueur.sommeGoldPS();//Calcul du gold
+              diamantPS = joueur.sommeDiamantPS();//Calcul du diamant
+              totalGold.innerText = gold;
+              totalGoldPS.innerText = goldPS;
+              totalDiamantPS.innerText = diamantPS;
             },
-            });
+            error: function () {
+              alert('Problème AJAX');
+            }
+          });
+        }
+        else {//Dans le cas où on n'a pas assez de gold
+          window.alert("Il n'y a pas assez d'argent pour augmenter le niveau d'un heros ! Attendez d'avoir plus de gold."); //Message d'alerte pour signaler au joueur qu'il n'a pas assez d'argent
+        }
+      },
+      save: function () {//Sauvegarde les héros et le gold et les diamants du joueur
+        $.ajax({
+          type: 'POST',
+          url: '/cart/enregistrementGoldDiamant',//Enregistrement du gold et des diamants du joueur
+          data: { gold, diamant },//Envoi de la valeur du gold et des diamants
+          success: function (received) {
+            $.ajax({
+              type: 'GET',
+              url: '/cart/vueTableSQL',//Vérification que les informations sont ajoutées à la table
+              success: function (received) {
+                $.ajax({
+                  type: 'GET',
+                  url: '/cart/deleteHeros',//Suppression de tous les héros du joueur dans la base de donnée
+                  success: function (received) {
+                    joueur.herosObtenus.forEach(row => $.ajax({
+                      type: 'POST',
+                      url: '/cart/enregistrementHeros',//Enregistrement dans la base de donnée de tous les héros du joueur
+                      data: { id_hero: row.id_hero, niveau: row.niveau },//Envoie de l'id, du niveau
+                      success: function (received) {
+                        window.location.href = 'logout';//Renvoi vers la page du logout
+                      },
+                      error: function () {
+                        alert('Problème AJAX');
+                      }
+                    }));
+                  },
+                  error: function () {
+                    alert('Problème AJAX');
+                  }
+                })
+              },
+              error: function () {
+                alert('Problème AJAX');
+              },
+            })
+          },
+          error: function () {
+            alert('Problème AJAX');
+          }
+        });
+      },
+    },
+  });
 
 </script>
 
 <script type="text/javascript">
-var windowGuide = null; // variable globale
-var WIP = true;
-function openGuidePopUp() {//Fenêtre du guide des héros
+  var windowGuide = null; // variable globale
+  var WIP = true;
+  function openGuidePopUp() {//Fenêtre du guide des héros
 
-  window.alert("WIP !"); //Message d'alerte pour signaler que ce sera terminé plus tard
+    window.alert("WIP !"); //Message d'alerte pour signaler que ce sera terminé plus tard
 
-  if (!WIP){
-    if(windowGuide == null || windowGuide.closed)
+    if (!WIP) {
+      if (windowGuide == null || windowGuide.closed)
     /* si le pointeur vers l'objet window n'existe pas
       ou s'il existe mais que la fenêtre a été fermée */ {
         windowGuide = window.open("/guide",
